# memTree

./: .env.example  .gitignore  README.md  app.py  claude.md  pyproject.toml
examples/: research_synthesis.py
memtree/: __init__.py  agent.py  kernel.py  replay.py  repo.py  run_log.py  state_summary.py
memtree/corpus/: __init__.py  seed.py
memtree/corpus/docs/: alpha_costs.md  alpha_methodology.md  alpha_response.md  beta_driftbench.md  beta_methodology.md  beta_response.md  gamma_costs.md  gamma_followup.md  gamma_methodology.md
memtree/primitives/: revert.py  scope.py  spawn.py  typed_submit.py
memtree/tools/: cached.py  query_db.py  read_section.py  save_finding.py  search_documents.py
tests/: test_primitives.py
tmp/: test_step2.py
