[project]
name = "memtree"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "smolagents>=1.0",
    "pandas>=2.0",
    "pydantic>=2.0",
    "rich>=13.0",
    "litellm>=1.0",
    "python-dotenv>=1.0",
    "GitPython>=3.1",
    "streamlit>=1.30",
    "streamlit-autorefresh>=1.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["memtree*"]
